# remu

./: Cargo.toml  InstructionFormatxlsx.xlsx  README.md
src/: assembler.rs  debugger.rs  emulator.rs  lib.rs  main.rs  program_loader.rs
src/computer/: mod.rs
src/cpu/: helperModules.rs  mod.rs
src/cpu/instructions/: group1.rs  group2.rs  group3.rs  group4.rs  group5.rs  io.rs  mod.rs  seg_override.rs
src/cpu/memory_unit/: memory_segments.rs  mod.rs
src/hardware/: keyboard.asm  keyboard.rs  lightbulb.asm  lightbulb.rs  mod.rs
tests/: fibonaci.asm  incax.asm  int_test.asm  jmp.asm  logarithem  logarithem.asm  mul.asm  proc  proc.asm  rot.asm  strings  test  test.asm
