[package]
name = "emulator"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.1.0"
console = "0.15.0"
eframe = "0.16.0"
wfd = "0.1.7"
libc = "0.2.120"
keyboard_query = "0.1.0"
device_query = "1.0.0"